add default values to parameters in the builder update test cases accordingly